[package]
name = "solana-serum-dump"
version = "0.1.0"
authors = ["Guanqun Lu <guanqun.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.15"
fraction = "0.7"
solana-sdk = "1.4"
solana-client = "1.4"
spl-token-swap = { git="https://github.com/solana-labs/solana-program-library.git", rev="75acddc100c51f6c8182882a1408e0811123e3dc", features=["no-entrypoint"] }
spl-token = "3.0"
spl-token-names = "0.2"
prettytable-rs = "0.8"
